# recipes

./: .gitignore  README.md  pyproject.toml
src/: api.py  app.py  app_logger.py  constants.py  main.py  models.py  shortcuts.py
src/data/: recipes.json
